# zran

./: .gitignore  CHANGELOG.md  README.md  environment.yml  out.dflidx  pyproject.toml  setup.py  test_zran.py
.github/workflows/: build-and-deploy-test.yml  build-and-deploy.yml  bump-version.yml  pytest.yml  release-checklist-comment.yml  release.yml  static-analysis.yml  test-build-and-deploy.yml
src/zran/: bits.py  zran.h  zran.pxd  zranlib.pyx
tests/: conftest.py  test_zran.py
zran/: czran.pxd  zranlib.c  zranlib.pyx
