[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2", "wheel>=0.40.0", "cython>=3.0.0b1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[project]
name = "zran"
requires-python = ">=3.8"
dynamic = ["version"]
authors = [
    {name="Forrest Williams", email="ffwilliams2@alaska.edu"},
]
description = "Utility for randomly accessing DEFLATE-compressed data"
readme = "README.md"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: zlib/libpng License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]

[project.urls]
Homepage = "https://github.com/forrestfwilliams/zran"
"Bug Tracker" = "https://github.com/forrestfwilliams/zran/issues"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyx?$'

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.cibuildwheel]
build = "cp3{8,9,10,11}-*"
test-requires = "pytest"
test-command = "pytest {package}/tests"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
